# assay

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  go.mod  go.sum  main.go
.beads/: .gitignore  beads.jsonl  metadata.json
.githooks/: pre-push
.github/workflows/: assay-ecosystem.yml  assay-map.yml
cmd/: map.go  map_test.go  root.go  verify.go  version.go
docs/: ARCHITECTURE.md  dependency-graph.md  ecosystem-graph.md  ecosystem-roots.txt  leyline-integration-plan.md
docs/decisions/: 0001-mache-coupling.md  0002-identity-normalization.md  0003-drift-v1-scope.md
docs/superpowers/specs/: 2026-06-22-assay-artifact-usage-graph-design.md
internal/artifact/: artifact.go  artifact_test.go  identity.go  kind.go
internal/code/: extract.go  extract_test.go  queries.go
internal/coverage/: compute.go  compute_test.go  report.go  tokenize.go  tokenize_test.go  types.go
internal/docs/: extract.go  extract_test.go
internal/embeddings/: leyline.go  leyline_test.go
internal/extract/: extract_test.go  extractor.go  registry.go
internal/extract/capnp/: capnp.go  capnp_test.go  emit.go  parse.go
internal/extract/cargo/: cargo.go  cargo_test.go  manifest.go
internal/extract/cargo/testdata/consumer/rs/crates/cas/: Cargo.toml
internal/extract/cargo/testdata/forms/: Cargo.toml
internal/extract/ci/: ci.go  ci_test.go  parse.go  walk.go
internal/extract/dockerfile/: dockerfile.go  dockerfile_test.go  normalize.go  (+1 more)
internal/report/: json.go  mermaid.go  mermaid_repo.go  report.go  report_test.go
internal/resolve/: buckets.go  resolve.go  resolve_test.go
(+30 files in other folders)
